--- a/.env.sample
+++ b/.env.sample
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server and MongoDB (Preview).
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://root:password@localhost:3306/express?schema=public"
+DATABASE_URL="mysql://root:password@localhost:3306/coursera_bookshop?schema=public"
