--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
     "build": "tsc -p ."
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.7",
     "nodemon": "^3.0.2",
-    "prisma": "^5.7.1",
+    "prisma": "^5.8.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.3"
   },
   "dependencies": {
     "@prisma/client": "^5.7.1",
-    "express": "^4.18.2"
+    "bcrypt": "^5.1.1",
+    "express": "^4.18.2",
+    "short-unique-id": "^5.0.3"
   }
 }
